example/lib/src/arbs/errors/app_es.arb
{
  "@@locale": "es",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Ocurrió un error",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ocurrió un error inesperado",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Informe de error enviado con éxito.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}